--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,6 @@ site_name: Jambones API
 nav:
     - Home: index.md
     - API:
-        - jambones call control JSON: jambones.md
+        - jambones Call Control JSON: jambones.md
         - REST API: rest.md
-    - About: about.md
 theme: readthedocs
