--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,4 +4,5 @@ nav:
     - API:
         - jambones Call Control JSON: jambones.md
         - REST API: rest.md
+    - Registering sip clients: register-hook.md
 theme: readthedocs
