--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,5 +4,6 @@ nav:
     - API:
         - jambones Call Control JSON: jambones.md
         - REST API: rest.md
+    - Data architecture: data.md
     - Authenticating sip clients: register-hook.md
 theme: readthedocs
