--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: jambonz API
 nav:
     - Home: index.md
     - API:
-        - jambones Call Control JSON: jambonz.md
+        - jambonz Call Control JSON: jambonz.md
         - REST API: rest.md
     - Data architecture: data.md
     - Authenticating sip clients: register-hook.md
