change them to gitbook

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,4 +6,4 @@ nav:
         - REST API: rest.md
     - Data architecture: data.md
     - Authenticating sip clients: register-hook.md
-theme: readthedocs
+theme: gitbook
