--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,11 @@
-site_name: jambonz API
+site_name: jambonz
+theme:
+  name: null
+  custom_dir: 'cinder'
 nav:
-    - Home: index.md
-    - API:
-        - jambonz Call Control JSON: jambonz.md
-        - REST API: rest.md
-    - Data architecture: data.md
-    - Authenticating sip clients: register-hook.md
-theme: gitbook
-custom_dir: gitbook
+  - Home: index.md
+  - API:
+      - jambonz Call Control JSON: jambonz.md
+      - REST API: rest.md
+  - Data architecture: data.md
+  - Authenticating sip clients: register-hook.md
