--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,3 +9,4 @@ nav:
       - REST API: rest.md
   - Data architecture: data.md
   - Authenticating sip clients: register-hook.md
+  - Tutorials: tutorials.md
